--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,9 @@
 <resources>
     <string name="app_name">LivenessSDK</string>
-    <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="item_live_detective">Live detection</string>
+    <string name="live_detection_success_tips">Live detection pass, click the third button to compare!</string>
+    <string name="live_detection_success">Living body test successful</string>
+    <string name="live_detection_failed">Living body test failed</string>
+    <string name="action_retry">try again</string>
+    <string name="action_ok" translatable="false">OK</string>
 </resources>
